[project]
name = "db-weekend-ticket-scanner"
version = "0.1.0"
description = "Deutsche Bahn Weekend Sparpreis Ticket Scanner for WSL2/WSLg"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "playwright>=1.40",
    "pydantic>=2.5",
    "python-dotenv>=1.2.2",
    "toml>=0.10",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
